fixed the overlap

--- a/codeTemplate/heatFrontEnd/src/pages/WeeklyCalendar.css
+++ b/codeTemplate/heatFrontEnd/src/pages/WeeklyCalendar.css
@@ -27,7 +27,7 @@
 }
 
 .event {
-  position: absolute;
+
   padding: 5px;
   color: white;
   border-radius: 4px;
